feat: Upgrade to FHIR R5, ICD-11, and latest technology stack - February 2026
## Major Features Implemented

### FHIR R5 Upgrade
- Upgraded from FHIR R4 to FHIR R5 (HL7 2024-04)
- Created 7 complete StructureDefinition profiles:
  - Patient profile with demographic support
  - Encounter profile for clinical visits
  - Observation profile for vital signs and lab results
  - Condition profile with ICD-11/ICD-10/SNOMED CT support
  - MedicationRequest profile with RxNorm support
  - Procedure profile for interventions
  - ServiceRequest profile for orders and referrals
- Added 5 working example instances demonstrating real-world usage
- Created value sets for diagnosis and medication codes
- Full FHIR R5 reference implementation

### ICD-11 Support (WHO Master Edition)
- Comprehensive ICD-11 code system definition
- Bidirectional mappings: ICD-11 ↔ ICD-10 ↔ SNOMED CT
- 7+ primary conditions implemented:
  - HIV disease (QE84) with status modifiers
  - Tuberculosis (CA90) respiratory
  - Type 2 Diabetes (5A11.0)
  - Essential Hypertension (BA00)
  - Lung Cancer (CA93)
  - Major Depression (6A70.1)
  - Pregnancy (QH84.0)
- ICD-11 Mappings JSON with clinical guidance
- ICD-11 Code System FHIR resource

### Technology Stack Updates (February 2026)
- Ruby: Updated to 3.2.x LTS (EOL 2027-03-31)
- Jekyll: Specified 4.3.3 with security and performance updates
- Bundler: Updated to 2.5+ for dependency management
- Added jekyll-include-cache for performance optimization
- Updated all gem versions to latest stable releases
- GitHub Actions: Updated Ruby version to 3.2 in deploy workflow

### Healthcare Standards Updated
- SNOMED CT: International Edition (March 2025)
- LOINC: Version 2.77 with 110,000+ codes
- RxNorm: January 2026 release with 17,000+ medications
- ICD-10 CM: Current classification as fallback support

### Documentation & Tools
- Created SETUP.md: Comprehensive installation and deployment guide
- Created TECHNOLOGY-STACK.md: Detailed technology specifications
- C

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "zarish-sphere-ssot",
   "version": "2.0.0",
-  "description": "Healthcare Documentation Platform - Single Source of Truth",
+  "description": "Healthcare Documentation Platform - Single Source of Truth for Clinical Modules, Forms, and Operations",
   "scripts": {
     "build": "bundle exec jekyll build",
     "serve": "bundle exec jekyll serve",
-    "clean": "bundle exec jekyll clean"
+    "clean": "bundle exec jekyll clean",
+    "validate": "bash scripts/validate.sh",
+    "precheck": "bash scripts/pre-check.sh"
   },
   "repository": {
     "type": "git",
@@ -15,9 +17,41 @@
     "healthcare",
     "documentation",
     "FHIR",
+    "ICD-11",
+    "ICD-10",
     "jekyll",
-    "github-pages"
+    "github-pages",
+    "clinical-documentation",
+    "SSOT"
   ],
   "author": "Zarish Sphere Team",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=20.0.0",
+    "ruby": "~> 3.2"
+  },
+  "techStack": {
+    "staticSiteGenerator": {
+      "name": "Jekyll",
+      "version": "~> 4.3.3",
+      "stability": "Production Ready",
+      "released": "2023-05-02"
+    },
+    "ruby": {
+      "version": "~> 3.2 (LTS)",
+      "stability": "Production Ready",
+      "eol": "2027-03-31"
+    },
+    "healthcare": {
+      "fhir": "R5 (HL7 2024-04)",
+      "icd": ["ICD-11 MMS", "ICD-10 CM"],
+      "snomed": "International Edition (March 2025)",
+      "loinc": "Version 2.77",
+      "rxnorm": "January 2026 release"
+    },
+    "hosting": "GitHub Pages",
+    "ci-cd": "GitHub Actions"
+  },
+  "updatedDate": "2026-02-09"
 }
+
