feat: comprehensive update with actual resources, FHIR R5, health modules, forms, country configs, and docs.zarishsphere.com domain configuration
- Replace all placeholder content with production-ready resources
- Migrate custom domain from zs-docs.github.io to docs.zarishsphere.com
- Update all email addresses to zarishsphere@gmail.com
- Create CNAME file for GitHub Pages custom domain configuration
- Update _config.yml for custom domain setup
- Add 7 comprehensive FHIR R5 profiles with proper namespaces
- Create 5 real-world FHIR R5 clinical examples (HIV, TB, ANC)
- Add 3 standardized FHIR value sets (conditions, coding systems, medications)
- Develop detailed HIV Care & Treatment health module (3200+ lines)
- Create comprehensive HIV Testing & Counseling form schema (2000+ lines)
- Add Bangladesh and India country configurations (400+ lines each)
- Create GitHub Pages deployment guide (1200+ lines)
- Update .gitignore with comprehensive file exclusions
- Generate UPDATE-SUMMARY document with all changes

Standards: FHIR R5 (HL7 2024-04), ICD-11 MMS, ICD-10 CM, SNOMED CT
Status: Production ready for https://docs.zarishsphere.com

--- a/.gitignore
+++ b/.gitignore
@@ -4,31 +4,71 @@ _site/
 .jekyll-cache/
 .jekyll-metadata
 
+# Ruby & Bundler
+vendor/
+.bundle/
+Gemfile.lock
+
 # Node
 node_modules/
 npm-debug.log
 package-lock.json
 
-# Archives and backups
-_archive/
-*-backup/
-*.backup
+# Python
+__pycache__/
+*.pyc
+*.pyo
+.pytest_cache/
+.venv/
+venv/
 
-# OS
-.DS_Store
-Thumbs.db
-
-# IDE
+# Editors & IDEs
 .vscode/
 .idea/
+.DS_Store
+Thumbs.db
 *.swp
 *.swo
+*.sublime-project
+*.sublime-workspace
 
-# Build
+# Build output
 dist/
 build/
 *.log
 
-# Temporary
+# Temporary & Archive
 tmp/
 temp/
+_archive/
+*-backup/
+*.backup
+.tmp
+
+# OS files
+.DS_Store
+Thumbs.db
+.AppleDouble
+.LSOverride
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Logs
+logs/
+*.log
+
+# Do NOT ignore these critical files
+!.github/
+!docs/
+!health/
+!operations/
+!forms/
+!fhir/
+!countries/
+!CNAME
+!_config.yml
+!index.md
+!README.md
